samples/sample-eks/kubernetes-manifests/kube-sa.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: aws-application-networking-system
  labels:
    name: aws-application-networking-system
    control-plane: gateway-api-controller

---
apiVersion: v1
kind: Namespace
metadata:
  name: aws-load-balancer-controller-system
  labels:
    name: aws-load-balancer-controller-system
